--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,6 @@ flutter:
          - asset: fonts/NotoSansSC-Light.otf
      - family: Serif
        fonts:
-         - asset: fonts/NotoSerifSC-Light.ttf
-
+         - asset: fonts/NotoSerifSC-Light.otf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
