--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/Avril.jpg
+   - static/images/Avril.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -61,12 +61,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-     - family: Sans
-       fonts:
-         - asset: fonts/NotoSansSC-Light.otf
-     - family: Serif
-       fonts:
-         - asset: fonts/NotoSerifSC-Light.otf
+#  fonts:
+#     - family: Sans
+#       fonts:
+#         - asset: fonts/NotoSansSC-Light.otf
+#     - family: Serif
+#       fonts:
+#         - asset: fonts/NotoSerifSC-Light.otf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
