--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,15 @@ dependencies:
   provider: ^4.3.2+3
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
-  mobx_codegen: ^1.1.2
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   gradient_app_bar: ^0.1.3
   build_runner: ^1.10.9
+  mobx_codegen: ^1.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
