--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http:
-  provider: ^4.3.2+3
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
   cupertino_icons: ^1.0.0
   rflutter_alert: ^1.1.0
+  webview_flutter: ^1.0.7
+  flutter_speed_dial: ^1.2.5
+  flutter_form: ^1.1.0
+  charts_flutter: ^0.9.0
+  share: ^0.6.5+4
+  http: ^0.12.2
+  panorama: ^0.1.0
+  fluttertoast: ^7.1.5
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +43,12 @@ dev_dependencies:
   gradient_app_bar: ^0.1.3
   build_runner: ^1.10.9
   mobx_codegen: ^1.1.2
+  flutter_launcher_icons: ^0.8.1
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "static/images/icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -51,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - static/images/Avril.jpg
+    - static/images/panorama.webp
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
