--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   panorama: ^0.1.0
   fluttertoast: ^7.1.5
   provider: ^4.3.2+3
+  visibility_detector: ^0.1.5
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
   assets:
     - static/images/Avril.jpg
     - static/images/panorama.webp
+    - static/images/menu.png
+    - static/images/watch.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
